# constrained_any

./: CMakeLists.txt  Design.md  LICENSE  Makefile  README.md  common.cmake
constrained_any/: CMakeLists.txt
constrained_any/inc/: constrained_any.hpp
inc/: constrained_any.hpp  constrained_any_cpp17.hpp
sample/: CMakeLists.txt  sample_of_constrained_any.cpp
test/: CMakeLists.txt
test/perf_test_src/: test_performance_constrained_any.cpp
test/test_src/: test_constrained_any.cpp
